--- a/opdracht_1/index.html
+++ b/opdracht_1/index.html
@@ -10,6 +10,8 @@
 
     <p id="para">Dit is een paragraaf</p>
 
+    <button onclick="change()">Click</button>
+
     <script src="script.js"></script>
 </body>
 </html>
