--- a/week2/opdracht_4/index.html
+++ b/week2/opdracht_4/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title">Hello World</h1>
-
-    <button onclick="kleur_aanpassen()">Click</button>
+    <h1 id="title" onclick="kleur_aanpassen()">Hello World</h1>
 
 
     <script src="app.js"></script>    
