--- a/week4/opdracht_9/index.html
+++ b/week4/opdracht_9/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>Click Counter</h1>
+    <button id="button">Click</button>
+    <div id="count">0</div>
 
     <script src="app.js"></script>
 </body>
