--- a/week5/opdracht_11/index.html
+++ b/week5/opdracht_11/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="result">Resultaat: </h1>
+
+    <input type="number" id="num1" placeholder="Eerste getal">
+    <input type="number" id="num2" placeholder="Tweede getal">
+    
+    <button onclick="add()">Optellen</button>
+    <button onclick="subtract()">Aftrekken</button>
+    <button onclick="multiply()">Vermenigvuldigen</button>
+    <button onclick="divide()">Delen</button>
 
 
     <script src="app.js"></script>
